--- a/PhoenixChatMessenger/app/build.gradle
+++ b/PhoenixChatMessenger/app/build.gradle
@@ -4,6 +4,10 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "com.farjad.phoenixchatmessenger"
         minSdkVersion 21
@@ -44,6 +48,10 @@ dependencies {
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    //
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.google.firebase:firebase-messaging:20.1.7'
 
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
