--- a/PhoenixChatMessenger/app/src/main/AndroidManifest.xml
+++ b/PhoenixChatMessenger/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="true">
         <activity android:name=".ResetPasswordActivity"
             android:parentActivityName=".LoginActivity"
             >
@@ -32,6 +33,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name="notification.FirebaseIdService"
+            android:exported="true"
+            android:enabled="true"
+            android:permission="TODO">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+
+            </intent-filter>
+
+        </service>
+        <service android:name="notification.MyFirebaseMessaging"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="TODO">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+
+            </intent-filter>
+
+        </service>
     </application>
 
 </manifest>
